# Products_API

./: .dockerignore  .env.example  .flake8  Dockerfile  README.md  celery_beat.py  celery_worker.py  docker-compose.yml  main.py  migrate.py  pyproject.toml  requirements.txt  start-dev.ps1  start-dev.sh  start_scheduler.py  start_worker.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: da51f84b2053_initial_migration.py
app/: celery_app.py  tasks.py
app/core/: config.py
app/db/: database.py
app/models/: models.py
app/routers/: auth.py  products.py  sync.py
app/schemas/: auth.py  base.py  external.py  product.py  user.py
app/services/: auth.py  external_providers.py  product_sync.py  sync.py
