[project]
name = "products-api"
version = "0.1.0"
description = "FastAPI REST API service for managing products with authentication and synchronization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.29.0",
    "celery>=5.5.3",
    "fastapi[all]>=0.118.0",
    "httpx>=0.25.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.1.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.43",
    "jose>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
lint = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=6.1.0",
    "mypy>=1.18.2",
    "types-passlib>=1.7.7.20250602",
    "types-python-jose>=3.5.0.20250531",
]

[tool.black]
line-length = 119
exclude = '''
(
  /(
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "celery.schedules.*",
    "celery.result.*",
    "jose.*",
    "passlib.*"
]
ignore_missing_imports = true

[tool.isort]
line_length = 119

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"
